Se mejoro el diseño de la seccion de contactenos

--- a/index.html
+++ b/index.html
@@ -196,30 +196,53 @@
     </section>
 
     <footer id="contacto" data-nav="theme-dark">
-        <div class="footer-grid">
-            <div class="reveal">
-                <h3 style="font-size:2.5rem;">Hablemos de código</h3>
-                <p><strong>📍 Oficina:</strong> Hub Tecnológico, Quito, Ecuador</p>
-                <p><strong>📞 Consultas:</strong> +593 99 999 9999</p>
-                <p><strong>📧 Email:</strong> hello@techengineers.com</p>
+        <div class="footer-container">
+            <div class="footer-grid">
+                <div class="contact-info reveal">
+                    <h2 class="contact-title">Hablemos de código</h2>
+                    <div class="contact-methods">
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div>
+                                <strong>Oficina</strong>
+                                <p>Hub Tecnológico, Quito, Ecuador</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone-alt"></i>
+                            <div>
+                                <strong>Consultas</strong>
+                                <p>+593 99 999 9999</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <div>
+                                <strong>Email</strong>
+                                <p>hello@techengineers.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="company-desc">
+                        TechEngineers es una firma de consultoría y desarrollo dedicada a la excelencia técnica.
+                        Convertimos desafíos complejos en soluciones de software elegantes.
+                    </p>
+                </div>
 
-                <p style="font-size:0.9rem; opacity:.8; max-width:500px;">
-                    TechEngineers es una firma de consultoría y desarrollo dedicada a la excelencia técnica.
-                    Convertimos desafíos complejos en soluciones de software elegantes.
-                </p>
-            </div>
-
-            <div class="reveal" style="transition-delay:0.2s;">
-                <div class="map-container">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15959.03038670535!2d-78.487!3d-0.18!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMMKwMTAnNDguMCJTIDc4wrAyOScxMy4yIlc!5e0!3m2!1ses!2sec!4v1620000000000!5m2!1ses!2sec"
-                        width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy"></iframe>
+                <div class="map-wrapper reveal" style="transition-delay:0.2s;">
+                    <div class="map-container">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15959.167098416847!2d-78.490000!3d-0.180000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59a706f9e9d9d%3A0x6b8d8d8d8d8d8d8d!2sQuito!5e0!3m2!1ses!2sec!4v1700000000000!5m2!1ses!2sec"
+                            width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy">
+                        </iframe>
+                    </div>
                 </div>
             </div>
 
             <div class="footer-bottom">
-                © 2026 TechEngineers Software. Elevando el estándar del desarrollo.
+                <p>© 2026 TechEngineers Software. Elevando el estándar del desarrollo.</p>
             </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
