Agrega parte mia. Arregla bug del carrusel

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 <i class="fab fa-docker fa-4x"></i>
                 <i class="fab fa-js fa-4x"></i>
                 <i class="fab fa-git-alt fa-4x"></i>
+
                 <i class="fab fa-react fa-4x"></i>
                 <i class="fab fa-node-js fa-4x"></i>
                 <i class="fab fa-python fa-4x"></i>
@@ -189,6 +190,7 @@
                 <i class="fab fa-docker fa-4x"></i>
                 <i class="fab fa-js fa-4x"></i>
                 <i class="fab fa-git-alt fa-4x"></i>
+
             </div>
         </div>
     </section>
@@ -226,12 +228,13 @@
                 <div class="swiper-slide">
                     <article class="offer-card">
                         <div class="card-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?w=800" class="card-img" alt="Mateo">
+                            <img src="public/APL.jpg" class="card-img" alt="Mateo">
                         </div>
                         <div class="card-info">
-                            <h3>Mateo</h3>
-                            <p class="card-description">Experto en Cloud Computing (Azure/AWS) y despliegue de infraestructuras escalables.</p>
-                            <a href="perfil-mateo.html" class="btn-secondary">Conoce más</a>
+                            <h3>Ariel</h3>
+                            <h3>Paredes Lozada</h3>
+                            <p class="card-description">Experto en backend con Node y Typescript. Arquitecto de bases de datos</p>
+                            <a href="https://arielparedeslozada.github.io/" class="btn-secondary">Conoce más</a>
                         </div>
                     </article>
                 </div>
