Se editaron los nombres de los integrantes

--- a/index.html
+++ b/index.html
@@ -195,92 +195,105 @@
         </div>
     </section>
 
-<section id="nosotros" data-nav="theme-dark">
-    <h2 class="section-title reveal">Conoce a Nuestro Equipo</h2>
-    
-    <div class="swiper-container-wrapper team-wrapper reveal">
-        <div class="swiper teamSwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <article class="offer-card">
-                        <div class="card-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=800" class="card-img" alt="Johan">
-                        </div>
-                        <div class="card-info">
-                            <h3>Johan</h3>
-                            <p class="card-description">Ingeniero de Software especializado en Front-End y arquitectura de soluciones digitales robustas.</p>
-                            <a href="perfil-johan.html" class="btn-secondary">Conoce más</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="swiper-slide">
-                    <article class="offer-card">
-                        <div class="card-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800" class="card-img" alt="Christian">
-                        </div>
-                        <div class="card-info">
-                            <h3>Christian</h3>
-                            <p class="card-description">Especialista en Unity, Clean Architecture y desarrollo de sistemas interactivos a medida.</p>
-                            <a href="perfil-christian.html" class="btn-secondary">Conoce más</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="swiper-slide">
-                    <article class="offer-card">
-                        <div class="card-img-wrapper">
-                            <img src="public/APL.jpg" class="card-img" alt="Mateo">
-                        </div>
-                        <div class="card-info">
-                            <h3>Ariel</h3>
-                            <h3>Paredes Lozada</h3>
-                            <p class="card-description">Experto en backend con Node y Typescript. Arquitecto de bases de datos</p>
-                            <a href="https://arielparedeslozada.github.io/" class="btn-secondary">Conoce más</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="swiper-slide">
-                    <article class="offer-card">
-                        <div class="card-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=800" class="card-img" alt="Andrés">
-                        </div>
-                        <div class="card-info">
-                            <h3>Andrés</h3>
-                            <p class="card-description">Desarrollador Full Stack con enfoque en bases de datos relacionales e integración de servicios.</p>
-                            <a href="perfil-andres.html" class="btn-secondary">Conoce más</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="swiper-slide">
-                    <article class="offer-card">
-                        <div class="card-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=800" class="card-img" alt="Santi">
-                        </div>
-                        <div class="card-info">
-                            <h3>Santi</h3>
-                            <p class="card-description">Ingeniero DevOps enfocado en la automatización de procesos y optimización de flujos de trabajo.</p>
-                            <a href="perfil-santi.html" class="btn-secondary">Conoce más</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="swiper-slide">
-                    <article class="offer-card">
-                        <div class="card-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=800" class="card-img" alt="Luis">
-                        </div>
-                        <div class="card-info">
-                            <h3>Luis</h3>
-                            <p class="card-description">Especialista en UI/UX Design y personalización avanzada de interfaces de usuario.</p>
-                            <a href="perfil-luis.html" class="btn-secondary">Conoce más</a>
-                        </div>
-                    </article>
+    <section id="nosotros" data-nav="theme-dark">
+        <h2 class="section-title reveal">Conoce a Nuestro Equipo</h2>
+
+        <div class="swiper-container-wrapper team-wrapper reveal">
+            <div class="swiper teamSwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <article class="offer-card">
+                            <div class="card-img-wrapper">
+                                <img src="public/johan.png" class="card-img" alt="Johan">
+                            </div>
+                            <div class="card-info">
+                                <h3>Johan</h3>
+                                <h3>Rodríguez Núñez</h3>
+                                <p class="card-description">Estudiante de Ingeniería de Software especializado en
+                                    Front-End y diseño UX/UI.</p>
+                                <a href="https://kiramman-mp3.github.io/" class="btn-secondary">Conoce más</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="offer-card">
+                            <div class="card-img-wrapper">
+                                <img src="public/elkin.png" class="card-img" alt="Elkin">
+                            </div>
+                            <div class="card-info">
+                                <h3>Elkin</h3>
+                                <h3>López Garcés</h3>
+                                <p class="card-description">Especialista en Unity, Clean Architecture y desarrollo de
+                                    sistemas interactivos a medida.</p>
+                                <a href="perfil-christian.html" class="btn-secondary">Conoce más</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="offer-card">
+                            <div class="card-img-wrapper">
+                                <img src="public/APL.jpg" class="card-img" alt="Mateo">
+                            </div>
+                            <div class="card-info">
+                                <h3>Ariel</h3>
+                                <h3>Paredes Lozada</h3>
+                                <p class="card-description">Experto en backend con Node y Typescript. Arquitecto de
+                                    bases de datos</p>
+                                <a href="https://arielparedeslozada.github.io/" class="btn-secondary">Conoce más</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="offer-card">
+                            <div class="card-img-wrapper">
+                                <img src="public/diego.png" class="card-img" alt="Diego">
+                            </div>
+                            <div class="card-info">
+                                <h3>Diego</h3>
+                                <h3>Jijón Viscaino</h3>
+                                <p class="card-description">Desarrollador Full Stack con enfoque en bases de datos
+                                    relacionales e integración de servicios.</p>
+                                <a href="perfil-diego.html" class="btn-secondary">Conoce más</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="offer-card">
+                            <div class="card-img-wrapper">
+                                <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=800"
+                                    class="card-img" alt="Santi">
+                            </div>
+                            <div class="card-info">
+                                <h3>Leonel</h3>
+                                <h3>Barros Lozada</h3>
+                                <p class="card-description">Ingeniero DevOps enfocado en la automatización de procesos y
+                                    optimización de flujos de trabajo.</p>
+                                <a href="perfil-santi.html" class="btn-secondary">Conoce más</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="offer-card">
+                            <div class="card-img-wrapper">
+                                <img src="public/jose.png"
+                                    class="card-img" alt="José">
+                            </div>
+                            <div class="card-info">
+                                <h3>José</h3>
+                                <h3>Manzano Bahamonde</h3>
+                                <p class="card-description">Especialista en UI/UX Design y personalización avanzada de
+                                    interfaces de usuario.</p>
+                                <a href="perfil-luis.html" class="btn-secondary">Conoce más</a>
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
+            <div class="swiper-button-next team-next"></div>
+            <div class="swiper-button-prev team-prev"></div>
+            <div class="swiper-pagination team-pagination"></div>
         </div>
-        <div class="swiper-button-next team-next"></div>
-        <div class="swiper-button-prev team-prev"></div>
-        <div class="swiper-pagination team-pagination"></div>
-    </div>
-</section>
+    </section>
     <footer id="contacto" data-nav="theme-dark">
         <div class="footer-container">
             <div class="footer-grid">
