--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                     <div class="swiper-slide">
                         <article class="offer-card">
                             <div class="card-img-wrapper">
-                                <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=800"
-                                    class="card-img" alt="Santi">
+                                <img src="/public/leonel.png"
+                                    class="card-img" alt="Leonel">
                             </div>
                             <div class="card-info">
                                 <h3>Leonel</h3>
